<resources>
    <string name="app_name">JetPackPrueba</string>
    <string name="cliente">Cliente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="cedula">Cedula</string>
    <string name="email">Correo</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
</resources>
