<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EditarClienteFragment">
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        card_view:cardCornerRadius="20dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView6"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bordes_superiores_inferiores_gradiente"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cedula"
                        android:textColor="@color/cardview_dark_background"
                        android:paddingLeft="10dp"
                        android:textSize="18dip" />
                    <EditText android:id="@+id/editTextCedula"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/cedula" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombres"
                        android:textColor="@color/cardview_dark_background"
                        android:paddingLeft="10dp"
                        android:textSize="18dip" />
                    <EditText android:id="@+id/editTextNombres"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombres" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/apellidos"
                        android:textColor="@color/cardview_dark_background"
                        android:paddingLeft="10dp"
                        android:textSize="18dip" />
                    <EditText android:id="@+id/editTextApellidos"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellidos" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textColor="@color/cardview_dark_background"
                        android:paddingLeft="10dp"
                        android:textSize="18dip" />
                    <EditText android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/direccion"
                        android:textColor="@color/cardview_dark_background"
                        android:paddingLeft="10dp"
                        android:textSize="18dip" />
                    <EditText android:id="@+id/editTextDireccion"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/direccion" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/telefono"
                        android:textColor="@color/cardview_dark_background"
                        android:paddingLeft="10dp"
                        android:textSize="18dip" />
                    <EditText android:id="@+id/editTextTelefono"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/Aceptar"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:text="Aceptar"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"/>
                    <Button
                        android:id="@+id/Cancelar"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:text="Cancelar"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>